--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: ruby
 bundler_args: --without dev
-script: bundle exec testrb test
+script: bundle exec rake test
 rvm:
   - 2.0.0
   - 2.1.0
